# main.go
@@ -2,18 +2,21 @@ package main
 
 import (
 	"fmt"
+	"os"
 	"qemmuChat/qemmu/config"
 	"qemmuChat/qemmu/lib"
 	"qemmuChat/qemmu/module"
 	"qemmuChat/qemmu/routes"
 	v1 "qemmuChat/qemmu/routes/v1"
 
+	"net/http"
+	_ "qemmuChat/docs"
+
+	"github.com/golang-jwt/jwt/v5"
+	echojwt "github.com/labstack/echo-jwt/v4"
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	echoSwagger "github.com/swaggo/echo-swagger"
-
-	"net/http"
-	_ "qemmuChat/docs"
 )
 
 // @title Swagger QemmuChat API
@@ -27,8 +30,10 @@ import (
 
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-
 // @BasePath /
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 func main() {
 
 	DB := config.Init()
@@ -40,10 +45,10 @@ func main() {
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 	api := e.Group("/api")
 
-	//auth
 	routes.AuthRoutes(e.Group("/auth"), DB)
 
 	api.Use(middleware.Logger())
+	e.Use(middleware.Recover())
 	e.Validator = lib.NewValidator()
 
 	api.Use(middleware.CORSWithConfig(middleware.CORSConfig{
@@ -52,8 +57,15 @@ func main() {
 
 	e.GET("/ws", module.UseNet)
 
+	config := echojwt.Config{
+		NewClaimsFunc: func(c echo.Context) jwt.Claims {
+			return new(module.JwtCustomClaims)
+		},
+		SigningKey: []byte(os.Getenv("SECRET")),
+	}
+	api.Use(echojwt.WithConfig(config))
 	//v1
-	v1.UserRoutes(api.Group("/v1/user"))
+	v1.UserRoutes(api.Group("/v1/user"), DB)
 	v1.ConfigRoutes(api.Group("/v1/config"), DB)
 
 	api.GET("/message", func(c echo.Context) error {
